Thu Nov 22 00:35:51 GMT 2012  Olly Betts <olly@survex.com>

	* common/closefrom.cc,configure.ac: On platforms with the F_MAXFD
	  fcntl but without closefrom(), we were failing to close the highest
	  numbered open fd in our closefrom() replacement.  We now also work
	  around valgrind not hiding some extra fds it has open, but then
	  complaining if we try to close them.

Wed Nov 21 22:50:21 GMT 2012  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: When reporting valgrind error, skip any
	  warnings.

Tue Nov 20 07:26:24 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: msetweights1 makes multidb1 and multidb2
	  redundant, so remove them.

Tue Nov 20 07:21:46 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Extend msetweights1 to test the case where
	  only even docids match, so in the multi_* case, only docids from
	  one subdatabase match.

Tue Nov 20 07:04:55 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Add testcase msetweights1 which checks we
	  get the weights we expect for a two term query.

Mon Nov 19 21:17:33 GMT 2012  Olly Betts <olly@survex.com>

	* queryparser/termgenerator.cc: TermGenerator internal member can
	  never be NULL, so drop NULL test.

Sat Nov 17 20:54:50 GMT 2012  Olly Betts <olly@survex.com>

	* tests/harness/testsuite.cc: Remove compatibility code for valgrind <
	  3.3.0, since we reject such old versions at configure time.

Sat Nov 17 00:05:36 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/localsubmatch.cc: Optimise an unweighted query term which
	  matches all the documents in a subdatabase to use the "MatchAll"
	  postlist.  (ticket#387)

Fri Nov 16 23:36:34 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_weight.cc: New testcase checkstatsweight1 which checks a
	  weight subclass gets the correct values for all the stats.

Fri Nov 16 07:30:18 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/version_h.cc: Generate a check for compatible _DEBUG